meson: Fixes for windows
Disable libdrm and disable vtest on windows

Signed-off-by: Yonggang Luo <luoyonggang@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -74,7 +74,6 @@ endforeach
 
 prog_python = import('python').find_installation('python3')
 
-libdrm_dep = dependency('libdrm', version : '>=2.4.50')
 thread_dep = dependency('threads')
 epoxy_dep = dependency('epoxy', version: '>= 1.5.4')
 m_dep = cc.find_library('m')
@@ -241,7 +240,9 @@ with_tests = get_option('tests')
 with_valgrind = get_option('valgrind')
 
 subdir('src')
-subdir('vtest')
+if host_machine.system() != 'windows'
+   subdir('vtest')
+endif
 
 if with_tests
    subdir('tests')
